--- a/application.json
+++ b/application.json
@@ -1,8 +1,20 @@
 {
   "pages": [
     {
-      "id": "Page1",
+      "id": "Home",
       "isDefault": true
+    },
+    {
+      "id": "OwnerHome",
+      "isDefault": false
+    },
+    {
+      "id": "EmployeeHome",
+      "isDefault": false
+    },
+    {
+      "id": "ManagerHome",
+      "isDefault": false
     }
   ],
   "viewMode": false,
