Changes to post for time off request

--- a/application.json
+++ b/application.json
@@ -1,7 +1,11 @@
 {
   "pages": [
     {
-      "id": "Page1",
+      "id": "Page3",
+      "isDefault": false
+    },
+    {
+      "id": "Request_Time_Off",
       "isDefault": true
     }
   ],
@@ -9,7 +13,11 @@
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "color": "#D9E7FF",
-  "unpublishedCustomJSLibs": [],
+  "unpublishedCustomJSLibs": [
+    {
+      "uidString": "xmlParser_https://cdnjs.cloudflare.com/ajax/libs/fast-xml-parser/3.17.5/parser.min.js"
+    }
+  ],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
   "applicationVersion": 2,
