Adding all screens for manager functionality included GET routes, PUT route, and DELETE route

--- a/application.json
+++ b/application.json
@@ -15,6 +15,22 @@
     {
       "id": "ManagerHome",
       "isDefault": false
+    },
+    {
+      "id": "View Other Managers",
+      "isDefault": false
+    },
+    {
+      "id": "Delete Employee",
+      "isDefault": false
+    },
+    {
+      "id": "View Employee Tasks",
+      "isDefault": false
+    },
+    {
+      "id": "Edit Employee Roles",
+      "isDefault": false
     }
   ],
   "viewMode": false,
